<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="#71DA82">

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:layout_marginTop="30dp" />

    <TextView
        android:id="@+id/tvStoreName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/store_name"
        android:textColor="#E91E63"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

    <ImageView
        android:id="@+id/ivGrocery"
        android:layout_width="match_parent"
        android:layout_height="288dp"
        android:src="@drawable/greengrocer"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp" />

    <Button
        android:id="@+id/btnShopping"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_shopping"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"/>

    <Button
        android:id="@+id/btnExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/button_exit"
        android:textColorLink="#3F51B5" />

</LinearLayout>