<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FourthActivity"
    android:background="#71DA82">

    <TextView
        android:id="@+id/tvThanks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:gravity="center"
        android:text="@string/finishing"
        android:textColor="#E91E63"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/ivThanks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/thanks"
        app:layout_constraintEnd_toEndOf="@+id/tvThanks"
        app:layout_constraintStart_toStartOf="@+id/tvThanks"
        app:layout_constraintTop_toBottomOf="@+id/tvThanks" />

    <Button
        android:id="@+id/btnBackAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/backk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/ivThanks"
        app:layout_constraintTop_toBottomOf="@+id/ivThanks" />

    <Button
        android:id="@+id/btnExitt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/button_exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/ivThanks"
        app:layout_constraintTop_toBottomOf="@+id/btnBackAgain" />
</androidx.constraintlayout.widget.ConstraintLayout>