<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#71DA82"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/tvStoreName2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/store_name"
        android:textColor="#E91E63"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/customizedSpinnerStock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvStoreName2"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="93dp"
        android:layout_marginEnd="2dp"
        android:minHeight="48dp" />

    <ImageView
        android:id="@+id/ivSelectedImage"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_below="@+id/customizedSpinnerStock"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="104dp"
        android:src="@drawable/apples" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:layout_below="@+id/tvSelectedCount"
        android:layout_marginTop="38dp" />

    <TextView
        android:id="@+id/tvSelectedCount"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_below="@+id/ivSelectedImage"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="-1dp"
        android:gravity="center"
        android:text="How many fruits/vegetables will you buy?"
        android:textColor="#000000"
        android:textSize="16dp"
        android:textStyle="bold|italic"/>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="136dp"
        android:text="@string/button_add" />

    <Button
        android:id="@+id/btnFinish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnAdd"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="101dp"
        android:text="@string/button_finish" />


</RelativeLayout>